tests/baselines/reference/nullishCoalescingOperator11.errors.txt
tests/cases/conformance/expressions/nullishCoalescingOperator/nullishCoalescingOperator11.ts(3,18): error TS2533: Object is possibly 'null' or 'undefined'.


==== tests/cases/conformance/expressions/nullishCoalescingOperator/nullishCoalescingOperator11.ts (1 errors) ====
    declare const f11: 1 | 0 | '' | null | undefined;
    
    let g11 = f11 ?? f11.toFixed()
                     ~~~
!!! error TS2533: Object is possibly 'null' or 'undefined'.
    
    
    